# zwave-automation-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  builtin_service.c  builtin_service.h  builtin_service_manager.c  builtin_service_manager.h  cli_auth.c  cli_auth.h  cli_commands.c  cli_commands.h  cli_homebridge.c  cli_homebridge.h  cli_logger.c  cli_logger.h  cli_resolver.c  cli_resolver.h  cli_rest.c  cli_rest.h  cli_scene.c  cli_scene.h  cli_sensor.c  cli_sensor.h  cli_service.c  cli_service.h  cli_vdev.c  cli_vdev.h  command_class.c  command_class.h  command_parser.c  command_parser.h  config  config.c  config.h  data_cache.c  data_cache.h  data_callbacks.c  data_callbacks.h  (+53 more)
BuiltinServices/: Conditional.c  Conditional.h  EventLog.c  EventLog.h  Expression.c  Expression.h  List.c  List.h  Resolver.c  Resolver.h  SensorEvent.c  SensorEvent.h
homebridge-zae/: CMakeLists.txt  README.md  config.json.sample  index.js  package.json  package.json.orig
homebridge-zae-camera/: ffmpeg.js  index.js  package.json
libZaeUtil/: CMakeLists.txt  Makefile  allocator.c  allocator.h  base64.h  byte_buffer.c  byte_buffer.h  cli.c  cli.h  crc32.c  crc32.h  curl_util.c  curl_util.h  event.c  event.h  event_dispatcher.c  event_dispatcher.h  event_log.c  event_log.h  event_pump.c  event_pump.h  hash.c  hash.h  lcp.c  lcp.h  libZaeUtil.vpj  logger.c  logger.h  resolver.c  resolver.h  service.c  service.h  service_args.c  service_args.h  socket.c  socket.h  socket_pump.c  socket_pump.h  stack.c  stack.h  (+13 more)
libZaeUtil/test/: test_vector.c  test_vectorutil.c
scripts/: CMakeLists.txt  Makefile  TestModule.py  TestModule.py.example  WashingMachineStatus.py
services/: CMakeLists.txt
services/Cron/: CMakeLists.txt  Cron.c  Cron.vpj  Makefile  cron_cli.c  cron_cli.h  cron_config.h  crontab.c  crontab.h
services/DateTime/: DateTime.c  DateTime.h  DateTime.vpj  Makefile  datetime_cli.c  datetime_cli.h
services/IFTTT/: IFTTT.c  IFTTT.vpj  Makefile  ifttt_cli.c  ifttt_cli.h  ifttt_config.h
services/Mail/: Mail.c  Mail.vpj  Makefile  mail_cli.c  mail_cli.h  mail_data.c  mail_data.h
services/SMS/: CMakeLists.txt  Makefile  SMS.c  SMS.vpj  sms_cli.c  sms_cli.h  sms_data.c  sms_data.h
services/Timer/: Makefile  Timer.c  Timer.vpj  timer_cli.c  timer_cli.h  timer_config.h
services/Weather/: Makefile  Weather.c  Weather.vpj  weather_cache.c  weather_cache.h  weather_cli.c  weather_cli.h  weather_config.h  weather_methods.c  weather_methods.h
vdev/: CMakeLists.txt
vdev/BlinkCamera/: BlinkCamera.c  BlinkCamera.vpj  BlinkCamera_cli.c  BlinkCamera_cli.h  BlinkCamera_config.c  BlinkCamera_config.h  Makefile
vdev/Button/: Button.c  Button_cli.c  Button_cli.h  Button_config.c  Button_config.h  Makefile
vdev/Sensor/: Makefile  (+6 more)
zae-client/: Makefile  zae-client.c  zae-client.vpj
(+12 files in other folders)
